--- a/app/views/layouts/common/_footer.html.haml
+++ b/app/views/layouts/common/_footer.html.haml
@@ -68,7 +68,7 @@
           %p.mt-4.text-base.text-gray-300
             We won't send you spam, and will only use this email address to inform you of your invite code.
 
-          %form.mt-4.sm:flex.sm:max-w-md
+          %form.mt-4.sm:flex.sm:max-w-md.default-form
             %label.sr-only{:for => "emailAddress"} Email address
             %input#emailAddress.appearance-none.min-w-0.w-full.bg-white.border.border-transparent.rounded-md.py-2.px-4.text-base.text-gray-900.placeholder-gray-500.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-offset-gray-800.focus:ring-white.focus:border-white.focus:placeholder-gray-400{:autocomplete => "email", :name => "emailAddress", :placeholder => "Email ...", :required => "", :type => "email"}
 
