--- a/app/javascript/packs/application.css
+++ b/app/javascript/packs/application.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+@layer components {
+  .default-input {
+    @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 focus:placeholder-gray-400;
+  }
+
+  .default-btn {
+    @apply cursor-pointer border border-transparent rounded-md py-2 px-4 flex items-center justify-center text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500;
+  }
+}
