--- a/app/views/profiles/_form_api_token.html.haml
+++ b/app/views/profiles/_form_api_token.html.haml
@@ -5,23 +5,24 @@
         %h2#api_token.text-lg.leading-6.font-medium.text-gray-900 API Token
         %p.mt-1.text-sm.text-gray-500 How you can access the api with personal tools.
 
-        %p
+        %p.mt-6
           API Documentation can be found #{ link_to "here.", apitome.root_path }
 
-        %p
+        %p.mt-2
           If you are building an app or extension that interacts with the transientBug API, you should make a
           = link_to "new OAuth2 Application", oauth_applications_path
           and make use of the OAuth2 Authorization Code flow if at all possible.
 
-        %p
+        %p.mt-2
           You can
           = link_to "click here", oauth_authorized_applications_path
           to see your currently authorized applications and revoke any of them at any time.
 
-        %p
+        %p.mt-2
+          .px-4.py-2.bg-gray-200.shadow-inner.rounded-md.w-full.select-all.cursor-text
+            = @user.api_token
 
-          = text_field_tag "api_token", @user.api_token, disabled: true
-
-          = link_to profile_regenerate_index_path(@service_announcement), class: "", method: :post do
-            = feather_svg "refresh-cw", class: "h-5 w-5"
-            regenerate
+    .px-4.py-3.bg-gray-50.text-right.sm:px-6
+      = link_to profile_regenerate_index_path(@service_announcement), class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500", method: :post do
+        = feather_svg "refresh-cw", class: "h-5 w-5 mr-2"
+        Regenerate
