--- a/app/views/profiles/_form_password_change.html.haml
+++ b/app/views/profiles/_form_password_change.html.haml
@@ -9,17 +9,17 @@
         .mt-6.grid.grid-cols-4.gap-6
           .col-span-4.sm:col-span-2
             = f.label :current_password, "Current Password", class: "block text-sm font-medium text-gray-700"
-            = f.password_field :current_password, class: "mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-limegreen-500 focus:border-gray-900 sm:text-sm"
+            = f.password_field :current_password, class: "mt-1 w-full default-input"
 
         .mt-6.grid.grid-cols-4.gap-6
           .col-span-4.sm:col-span-2
             = f.label :password, "New Password", class: "block text-sm font-medium text-gray-700"
-            = f.password_field :password, class: "mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-limegreen-500 focus:border-gray-900 sm:text-sm"
+            = f.password_field :password, class: "mt-1 w-full default-input"
 
         .mt-6.grid.grid-cols-4.gap-6
           .col-span-4.sm:col-span-2
             = f.label :password_confirmation, "Confirm New Password", class: "block text-sm font-medium text-gray-700"
-            = f.password_field :password_confirmation, class: "mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-limegreen-500 focus:border-gray-900 sm:text-sm"
+            = f.password_field :password_confirmation, class: "mt-1 w-full default-input"
 
       .px-4.py-3.bg-gray-50.text-right.sm:px-6
-        = f.submit "Change", class: "cursor-pointer bg-gray-500 border border-transparent rounded-md shadow-sm py-2 px-4 inline-flex justify-center text-sm font-medium text-white hover:bg-limegreen-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
+        = f.submit "Change", class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500"
