--- a/app/views/oauth/applications/index.html.haml
+++ b/app/views/oauth/applications/index.html.haml
@@ -2,30 +2,42 @@
   Developer - OAuth2 Apps
 
 = render "profiles/tabs" do
-  %h2 Developer OAuth2 Apps
+  %section( aria-labelledby="oauth_table" )
+    .shadow.sm:rounded-md.sm:overflow-hidden
+      .bg-white.py-6.px-4.sm:p-6
+        .-ml-4.-mt-4.flex.justify-between.items-center.flex-wrap.sm:flex-nowrap
+          .ml-4.mt-4
+            %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Developer OAuth2 Apps
+            .mt-1.text-sm.text-gray-500
+              Build applications that interact with the transientBug API
 
-  = link_to new_oauth_application_path do
-    New
+          .ml-4.mt-4.flex-shrink-0
+            =link_to new_oauth_application_path, class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500" do
+              Create new app
 
-  %table
-    %thead
-      %tr
-        %th Name
-        %th Callback URLs
-        %th Created At (UTC)
+        .mt-6
+          %table.min-w-full.divide-y.divide-gray-200
+            %thead.bg-gray-50
+              %tr
+                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
+                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
+                %th.relative.px-6.py-3( scope="col" )
+                  %span.sr-only Actions
 
-    %tbody
-      - if @applications.any?
-        - @applications.each do |application|
-          %tr
-            %td= application.name
-            %td
-              %pre.hidden.sm:block= application.redirect_uri
-            %td= application.created_at.to_s(:long)
+            %tbody.bg-white.divide-y.divide-gray-200
+              - if @applications.any?
+                - @applications.each do |application|
+                  %tr
+                    %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
+                    %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
+                      = render RelativeTimeComponent.new(time: application.created_at)
+                    %td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
+                      = link_to "Inspect", oauth_application_path(application), class: "text-indigo-600 hover:text-indigo-900"
 
-      - else
-        %tr
-          %td{ colspan: 2 }
-            No applications made yet
+              - else
+                %tr
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
+                    No applications made yet
 
-  = paginate @applications
+      .px-4.py-3.bg-gray-50.text-right.sm:px-6
+        = paginate @applications
