--- a/app/views/oauth/authorized_applications/index.html.haml
+++ b/app/views/oauth/authorized_applications/index.html.haml
@@ -2,24 +2,47 @@
   Authorized Apps
 
 = render "profiles/tabs" do
-  %p
-    You've authorized these apps to act on your behalf to interact with the transientBug API and access or modify your bookmark data.
+  %section( aria-labelledby="oauth_table" )
+    .shadow.sm:rounded-md.sm:overflow-hidden
+      .bg-white.py-6.px-4.sm:p-6
+        .-ml-4.-mt-4.flex.justify-between.items-center.flex-wrap.sm:flex-nowrap
+          .ml-4.mt-4
+            %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Authorized Apps
+            .mt-1.text-sm.text-gray-500
+              You've authorized these apps to act on your behalf to interact with the transientBug API and access or modify your bookmark data.
 
-  %table
-    %thead
-      %tr
-        %th Application Name
-        %th Created At
-    %tbody
-      - if @applications.any?
-        - @applications.each do |application|
-          %tr
-            %td= application.name
-            %td= render RelativeTimeComponent.new time: application.created_at
+        .mt-6
+          %table.min-w-full.divide-y.divide-gray-200
+            %thead.bg-gray-50
+              %tr
+                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
+                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
+                -#%th.relative.px-6.py-3( scope="col" )
+                  %span.sr-only Actions
 
-      - else
-        %tr
-          %td{ colspan: 2 }
-            No applications authorized
+            %tbody.bg-white.divide-y.divide-gray-200
+              - if @applications.any?
+                - @applications.each do |application|
+                  %tr
+                    %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
+                    %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
+                      = render RelativeTimeComponent.new(time: application.created_at)
+                    -#%td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
+                      = link_to "Inspect", oauth_application_path(application), class: "text-indigo-600 hover:text-indigo-900"
 
-  = paginate @applications
+              - else
+                %tr
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
+                    No applications authorized
+
+      .px-4.py-3.bg-gray-50.text-right.sm:px-6
+        - pagination = paginate @applications, theme: "card_footer"
+        - if pagination.present?
+          = pagination
+        - else
+          %nav.py-3.flex.items-center.justify-between( aria-label="Pagination" )
+            .hidden.sm:block
+              %p.text-sm.text-gray-700
+                Showing
+                %span.font-medium all
+                results
