--- a/app/views/oauth/applications/new.html.haml
+++ b/app/views/oauth/applications/new.html.haml
@@ -1,7 +1,5 @@
 - content_for :page_title do
-  New OAuth2 App
+  New App
 
 = render "profiles/tabs" do
-  %h2 New OAuth2 App
-
   = render "form", application: @application
