--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -1,4 +1,4 @@
-= form_with model: bookmark, class: "", html: { autocomplete: "off" } do |f|
+= form_with model: bookmark, html: { autocomplete: "off" } do |f|
   - if bookmark.errors.any?
     %h2= "#{ pluralize bookmark.errors.count, "error" } prohibited this bookmark from being saved:"
     %ul
