--- a/app/views/bookmarks/show.html.haml
+++ b/app/views/bookmarks/show.html.haml
@@ -4,7 +4,7 @@
 - content_for :page_actions do
   = link_to "Delete", bookmark_path(@bookmark), method: :delete, class: "text-sm font-medium text-gray-400 hover:text-gray-900", data: { confirm: "Are you sure?" }
 
-  = link_to "Edit", edit_bookmark_path(@bookmark), class: "inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500"
+  = link_to "Edit", edit_bookmark_path(@bookmark), class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500"
 
 .flex.flex-col.justify-between.lg:flex-row.px-4.sm:px-0
   .w-full.flex.flex-col.lg:mr-2.sm:mb-2
