final public facing cleanup and bug fix some doorkeeper things
need to look into de-customizing doorkeeper and using some of the newer config options
that have shown up since i first did this all

--- a/app/components/card_component/card_component.html.haml
+++ b/app/components/card_component/card_component.html.haml
@@ -4,7 +4,10 @@
       .-ml-4.-mt-4.flex.justify-between.items-center.flex-wrap.sm:flex-nowrap
         = header
 
-    .mt-6
+      .mt-6
+        = body
+
+    - else
       = body
 
   - if footer.present?
