--- a/app/components/stats_component/stats_component.html.haml
+++ b/app/components/stats_component/stats_component.html.haml
@@ -4,6 +4,6 @@
       = @title
 
 %div
-  %dl.mt-5.grid.grid-cols-1.rounded.bg-white.overflow-hidden.shadow.divide-y.divide-gray-200.md:grid-cols-3.md:divide-y-0.md:divide-x
+  %dl.mt-5.grid.grid-cols-1.sm:rounded-md.bg-white.overflow-hidden.shadow.divide-y.divide-gray-200.md:grid-cols-3.md:divide-y-0.md:divide-x
     - stats.each do |stat|
       = stat
