--- a/app/views/invites/index.html.haml
+++ b/app/views/invites/index.html.haml
@@ -19,4 +19,4 @@
           = text_field_tag "code", "", placeholder: "12345", class: "default-input w-full"
 
       %div
-        = submit_tag "Claim!", class: "default-btn w-full bg-limegreen-500 hover:bg-limegreen-600"
+        = submit_tag "Claim!", class: "btn -secondary"
