--- a/app/views/invites/show.html.haml
+++ b/app/views/invites/show.html.haml
@@ -44,4 +44,4 @@
           = f.password_field :password_confirmation, placeholder: "**************", class: "default-input w-full"
 
       %div
-        = f.submit "Register", class: "default-btn w-full bg-limegreen-500 hover:bg-limegreen-600"
+        = f.submit "Register", class: "btn -secondary"
