--- a/app/views/layouts/common/_footer.html.haml
+++ b/app/views/layouts/common/_footer.html.haml
@@ -61,7 +61,7 @@
               = inline_svg_pack_tag "feather/heart.svg", class: "text-cerise-500 h-6 w-6"
               in Colorado
 
-      - unless signed_in?
+      -#- unless signed_in?
         .mt-8.xl:mt-0
           %h3.text-sm.font-semibold.text-gray-400.tracking-wider.uppercase
             Request an invite
