--- a/app/views/layouts/common/_navbar.html.haml
+++ b/app/views/layouts/common/_navbar.html.haml
@@ -43,7 +43,7 @@
           / Profile dropdown
           .flex-shrink-0.relative.ml-4( data-controller="dropdown" )
             %div
-              %button.bg-white.p-1.rounded-full.text-gray-400.hover:text-gray-500.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-indigo-500{"aria-haspopup" => "true"}( data-action="click->dropdown#toggle" )
+              %button.bg-white.p-1.rounded-full.text-gray-400.hover:text-gray-500.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-limegreen-500{"aria-haspopup" => "true"}( data-action="click->dropdown#toggle" )
                 %span.sr-only Open user menu
                 = inline_svg_pack_tag "feather/user.svg", class: "h-6 w-6"
 
