--- a/app/views/profiles/_form_password_change.html.haml
+++ b/app/views/profiles/_form_password_change.html.haml
@@ -1,12 +1,13 @@
 %section( aria-labelledby="password_change" )
   = form_with url: password_profile_path, method: :post do |f|
-    .shadow.sm:rounded-md.sm:overflow-hidden
-      .bg-white.py-6.px-4.sm:p-6
-        %div
+    = render CardComponent.new do |c|
+      = c.with :header do
+        .ml-4.mt-4
           %h2#password_change.text-lg.leading-6.font-medium.text-gray-900 Change Your Password
           %p.mt-1.text-sm.text-gray-500 Keep your account secure.
 
-        .mt-6.grid.grid-cols-4.gap-6
+      = c.with :body do
+        .grid.grid-cols-4.gap-6
           .col-span-4.sm:col-span-2
             = f.label :current_password, "Current Password", class: "block text-sm font-medium text-gray-700"
             = f.password_field :current_password, class: "mt-1 w-full default-input"
@@ -21,5 +22,5 @@
             = f.label :password_confirmation, "Confirm New Password", class: "block text-sm font-medium text-gray-700"
             = f.password_field :password_confirmation, class: "mt-1 w-full default-input"
 
-      .px-4.py-3.bg-gray-50.text-right.sm:px-6
-        = f.submit "Change", class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500"
+      = c.with :footer do
+        = f.submit "Change", class: "btn -secondary"
