--- a/app/views/profiles/import/_form.html.haml
+++ b/app/views/profiles/import/_form.html.haml
@@ -11,4 +11,4 @@
             = f.file_field :upload, aria: { describedby: "Upload file" }, class: "mt-1 w-full default-input"
 
       .px-4.py-3.bg-gray-50.text-right.sm:px-6
-        = f.submit "Import", class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500"
+        = f.submit "Import", class: "btn -secondary"
