--- a/app/components/bookmark_card_component/bookmark_card_component.html.haml
+++ b/app/components/bookmark_card_component/bookmark_card_component.html.haml
@@ -1,16 +1,17 @@
-.bg-white.shadow.overflow-hidden.md:rounded-md.px-4.py-4.sm:px-6
-  .sm:flex.items-center.justify-between
-    %p.font-medium.text-royalblue-700.truncate
-      = link_to @bookmark.title, bookmark_path(@bookmark)
-      %small.text-gray-500.text-sm (#{ link_to @bookmark.uri.host.to_s, @bookmark.uri.to_s, title: @bookmark.uri.to_s })
+= render CardComponent.new do |c|
+  = c.with :body do
+    .sm:flex.items-center.justify-between
+      %p.font-medium.text-royalblue-700.truncate
+        = link_to @bookmark.title, bookmark_path(@bookmark)
+        %small.text-gray-500.text-sm (#{ link_to @bookmark.uri.host.to_s, @bookmark.uri.to_s, title: @bookmark.uri.to_s })
 
-  - if @bookmark.description
+    - if @bookmark.description
+      .mt-2.sm:flex.sm:justify-between.items-baseline
+        %p= truncate @bookmark.description
+
     .mt-2.sm:flex.sm:justify-between.items-baseline
-      %p= truncate @bookmark.description
+      .sm:flex
+        = render RelativeTimeComponent.new(time: @bookmark.created_at)
 
-  .mt-2.sm:flex.sm:justify-between.items-baseline
-    .sm:flex
-      = render RelativeTimeComponent.new(time: @bookmark.created_at)
-
-    .flex-shrink-0.flex.space-x-1.mt-2.sm:mt-0
-      = render TagComponent.with_collection(@bookmark.tags)
+      .flex-shrink-0.flex.space-x-1.mt-2.sm:mt-0
+        = render TagComponent.with_collection(@bookmark.tags)
