--- a/app/javascript/packs/application.css
+++ b/app/javascript/packs/application.css
@@ -7,7 +7,26 @@
     @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 focus:placeholder-gray-400;
   }
 
-  .default-btn {
-    @apply cursor-pointer border border-transparent rounded-md py-2 px-4 flex items-center justify-center text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500;
+  .btn {
+    @apply inline-flex cursor-pointer border border-transparent rounded-md py-2 px-4 flex items-center justify-center text-base font-medium;
+
+    &.-primary {
+      @apply bg-limegreen-500 hover:bg-limegreen-600 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500;
+    }
+
+    &.-secondary {
+      @apply bg-gray-500 hover:bg-gray-600 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500;
+    }
+
+    &.-tertiary {
+      @apply text-sm font-medium text-gray-400 hover:text-gray-900
+      /*@apply bg-gray-500 hover:bg-limegreen-500 text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500;*/
+    }
+  }
+
+  .card {
+    & .header {
+      /*@apply */
+    }
   }
 }
