--- a/app/views/bookmarks/_form.html.haml
+++ b/app/views/bookmarks/_form.html.haml
@@ -1,20 +1,45 @@
-= form_with model: bookmark, html: { autocomplete: "off" } do |f|
-  - if bookmark.errors.any?
-    %h2= "#{ pluralize bookmark.errors.count, "error" } prohibited this bookmark from being saved:"
-    %ul
-      - bookmark.errors.full_messages.each do |message|
-        %li= message
+%section( aria-labelledby="bookmark_form" )
+  = form_with model: bookmark, html: { autocomplete: "off" } do |f|
+    = render CardComponent.new do |c|
+      -#= c.with :header do
+        .ml-4.mt-4
+          %h2#bookmark_form.text-lg.leading-6.font-medium.text-gray-900.truncate
+            - if bookmark.new_record?
+              Create a New Bookmark
+            - else
+              Updating #{bookmark.title}
+          -#%p.mt-1.text-sm.text-gray-500 
 
-  = f.label :uri
-  = f.url_field :uri, value: bookmark.uri.to_s, aria: { describedby: "Bookmark URL" }
+      = c.with :body do
+        - if bookmark.errors.any?
+          %h2= "#{ pluralize user.errors.count, "error" } prohibited this bookmark from being saved:"
+          %ul
+            - bookmark.errors.full_messages.each do |message|
+              %li= message
 
-  = f.label :title
-  = f.text_field :title, aria: { describedby: "Bookmark title" }
+        .grid.grid-cols-4.gap-6
+          .col-span-4.sm:col-span-2
+            = f.label :uri, class: "block text-sm font-medium text-gray-700"
+            = f.url_field :uri, class: "mt-1 w-full default-input"
+            -#%p.mt-2.text-sm.text-gray-500
 
-  = f.label :tags
-  = f.text_field :tags, value: bookmark.tags.map(&:label).join(","), autocomplete: "off", aria: { describedby: "Bookmark tags" }
+        .mt-6.grid.grid-cols-4.gap-6
+          .col-span-4.sm:col-span-2
+            = f.label :title, class: "block text-sm font-medium text-gray-700"
+            = f.text_field :title, class: "mt-1 w-full default-input"
+            -#%p.mt-2.text-sm.text-gray-500
 
-  = f.label :description
-  = f.text_area :description, aria: { describedby: "Bookmark description" }
+        .mt-6.grid.grid-cols-4.gap-6
+          .col-span-4.sm:col-span-2
+            = f.label :tags, class: "block text-sm font-medium text-gray-700"
+            = f.text_field :tags, value: bookmark.tags.map(&:label).join(", "), autocomplete: "off", class: "mt-1 w-full default-input"
+            -#%p.mt-2.text-sm.text-gray-500
 
-  = f.submit "Save", class: ""
+        .mt-6.grid.grid-cols-4.gap-6
+          .col-span-4.sm:col-span-2
+            = f.label :description, class: "block text-sm font-medium text-gray-700"
+            = f.text_area :description, class: "mt-1 w-full default-input"
+            -#%p.mt-2.text-sm.text-gray-500
+
+      = c.with :footer do
+        = f.submit class: "btn -primary"
