--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -4,6 +4,8 @@
 = render(StatsComponent.new) do |c|
   = c.stats([ { title: "Total Bookmarks", number: @stats[:total_count] }, { title: "Untagged Bookmarks", number: @stats[:untagged_count] }, { title: "Tags", number: 0 } ])
 
-%h3 Recent Bookmarks
+.md:flex.md:items-center.md:justify-between.px-4.sm:px-0
+  %h3.text-xl.font-bold.leading-7.text-gray-900.sm:text-3xl.sm:truncate Recent Bookmarks
+
 .space-y-3
   = render BookmarkCardComponent.with_collection(@recent_bookmarks)
