--- a/app/views/oauth/applications/index.html.haml
+++ b/app/views/oauth/applications/index.html.haml
@@ -3,43 +3,42 @@
 
 = render "profiles/tabs" do
   %section( aria-labelledby="oauth_table" )
-    .shadow.sm:rounded-md.sm:overflow-hidden
-      .bg-white.py-6.px-4.sm:p-6
-        .-ml-4.-mt-4.flex.justify-between.items-center.flex-wrap.sm:flex-nowrap
-          .ml-4.mt-4
-            %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Developer OAuth2 Apps
-            .mt-1.text-sm.text-gray-500
-              Build applications that interact with the transientBug API
+    = render CardComponent.new do |c|
+      = c.with :header do
+        .ml-4.mt-4
+          %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Developer OAuth2 Apps
+          .mt-1.text-sm.text-gray-500
+            Build applications that interact with the transientBug API
 
-          .ml-4.mt-4.flex-shrink-0
-            =link_to new_oauth_application_path, class: "default-btn inline-flex bg-gray-500 hover:bg-limegreen-500" do
-              Create new app
+        .ml-4.mt-4.flex-shrink-0
+          =link_to new_oauth_application_path, class: "btn -primary" do
+            Create new app
 
-        .mt-6
-          %table.min-w-full.divide-y.divide-gray-200
-            %thead.bg-gray-50
-              %tr
-                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
-                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
-                %th.relative.px-6.py-3( scope="col" )
-                  %span.sr-only Actions
+      = c.with :body do
+        %table.min-w-full.divide-y.divide-gray-200
+          %thead.bg-gray-50
+            %tr
+              %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
+              %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
+              %th.relative.px-6.py-3( scope="col" )
+                %span.sr-only Actions
 
-            %tbody.bg-white.divide-y.divide-gray-200
-              - if @applications.any?
-                - @applications.each do |application|
-                  %tr
-                    %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
-                    %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
-                      = render RelativeTimeComponent.new(time: application.created_at)
-                    %td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
-                      = link_to "Inspect", oauth_application_path(application), class: "text-sm font-medium text-gray-400 hover:text-gray-900"
-
-              - else
+          %tbody.bg-white.divide-y.divide-gray-200
+            - if @applications.any?
+              - @applications.each do |application|
                 %tr
-                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
-                    No applications made yet
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
+                    = render RelativeTimeComponent.new(time: application.created_at)
+                  %td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
+                    = link_to "Inspect", oauth_application_path(application), class: "text-sm font-medium text-gray-400 hover:text-gray-900"
 
-      .px-4.py-3.bg-gray-50.text-right.sm:px-6
+            - else
+              %tr
+                %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
+                  No applications made yet
+
+      = c.with :footer do
         - pagination = paginate @applications, theme: "card_footer"
         - if pagination.present?
           = pagination
