--- a/app/views/oauth/authorized_applications/index.html.haml
+++ b/app/views/oauth/authorized_applications/index.html.haml
@@ -3,39 +3,38 @@
 
 = render "profiles/tabs" do
   %section( aria-labelledby="oauth_table" )
-    .shadow.sm:rounded-md.sm:overflow-hidden
-      .bg-white.py-6.px-4.sm:p-6
-        .-ml-4.-mt-4.flex.justify-between.items-center.flex-wrap.sm:flex-nowrap
-          .ml-4.mt-4
-            %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Authorized Apps
-            .mt-1.text-sm.text-gray-500
-              You've authorized these apps to act on your behalf to interact with the transientBug API and access or modify your bookmark data.
+    = render CardComponent.new do |c|
+      = c.with :header do
+        .ml-4.mt-4
+          %h2#oauth_table.text-lg.leading-6.font-medium.text-gray-900 Authorized Apps
+          .mt-1.text-sm.text-gray-500
+            You've authorized these apps to act on your behalf to interact with the transientBug API and access or modify your bookmark data.
 
-        .mt-6
-          %table.min-w-full.divide-y.divide-gray-200
-            %thead.bg-gray-50
-              %tr
-                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
-                %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
-                -#%th.relative.px-6.py-3( scope="col" )
-                  %span.sr-only Actions
+      = c.with :body do
+        %table.min-w-full.divide-y.divide-gray-200
+          %thead.bg-gray-50
+            %tr
+              %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Name
+              %th.px-6.py-3.text-left.text-xs.font-medium.text-gray-500.uppercase.tracking-wider( scope="col" ) Created At
+              -#%th.relative.px-6.py-3( scope="col" )
+                %span.sr-only Actions
 
-            %tbody.bg-white.divide-y.divide-gray-200
-              - if @applications.any?
-                - @applications.each do |application|
-                  %tr
-                    %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
-                    %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
-                      = render RelativeTimeComponent.new(time: application.created_at)
-                    %td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
-                      = link_to "Revoke", oauth_application_path(application), class: "text-sm font-medium text-gray-400 hover:text-gray-900", method: :delete, data: { confirm: "Are you sure you want to revoke this apps access to your account? You can always reauthorize the app at a later time." }
-
-              - else
+          %tbody.bg-white.divide-y.divide-gray-200
+            - if @applications.any?
+              - @applications.each do |application|
                 %tr
-                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
-                    No applications authorized
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900= application.name
+                  %td.px-6.py-4.whitespace-nowrap.text-sm.text-gray-500
+                    = render RelativeTimeComponent.new(time: application.created_at)
+                  %td.px-6.py-4.whitespace-nowrap.text-right.text-sm.font-medium
+                    = link_to "Revoke", oauth_application_path(application), class: "text-sm font-medium text-gray-400 hover:text-gray-900", method: :delete, data: { confirm: "Are you sure you want to revoke this apps access to your account? You can always reauthorize the app at a later time." }
 
-      .px-4.py-3.bg-gray-50.text-right.sm:px-6
+            - else
+              %tr
+                %td.px-6.py-4.whitespace-nowrap.text-sm.font-medium.text-gray-900{ colspan: 3 }
+                  No applications authorized
+
+      = c.with :footer do
         - pagination = paginate @applications, theme: "card_footer"
         - if pagination.present?
           = pagination
