work more on the admin panel
trying to get some drop in styles going that i can drop in and get more advanced features rebuilt later
also move to turbo and hotwire vs turbolinks, and upgrade some other things

--- a/app/views/admin/bookmarks/show.html.haml
+++ b/app/views/admin/bookmarks/show.html.haml
@@ -4,7 +4,7 @@
 = model_tag @bookmark, no_checkbox: true, only: [ :id, :title, :uri ]
 
 .ui.menu
-  = link_to bookmark_cache_index_path(@bookmark), data: { turbolinks: false }, class: "item" do
+  = link_to bookmark_cache_index_path(@bookmark), data: { turbo: false }, class: "item" do
     %i.eye.icon
     view cache
 
