--- a/app/views/layouts/blank.html.haml
+++ b/app/views/layouts/blank.html.haml
@@ -4,8 +4,8 @@
     = render "layouts/common/head" do
       %title transientBug #{ content_for :page_title }
 
-      = stylesheet_pack_tag "application", media: "all", "data-turbolinks-track": "reload"
-      = javascript_pack_tag "application", "data-turbolinks-track": "reload", "data-turbolinks-eval": false
+      = stylesheet_pack_tag "application", media: "all", "data-turbo-track": "reload"
+      = javascript_pack_tag "application", "data-turbo-track": "reload", "data-turbo-eval": false
 
   %body.bg-gray-200{ class: [  controller_name, action_name ] }
     = yield
