more admin work and fix an issue with chewy

--- a/app/javascript/packs/admin.css
+++ b/app/javascript/packs/admin.css
@@ -21,8 +21,10 @@
   @apply bg-limegreen-500;
 }
 
-.generic-form {
+.filter-form {
   @apply my-4 space-y-2;
+
+  input[type=hidden] { display: none; }
 
   .input {
     @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 focus:placeholder-gray-400;
@@ -45,6 +47,28 @@
 
   & .actions {
     @apply flex flex-row space-x-4 mt-2
+  }
+}
+
+.generic-form {
+  .form-wrapper {
+    @apply space-y-8 divide-y divide-gray-200;
+  }
+
+  .section:not(:first-child) {
+    @apply pt-8;
+  }
+
+  .input {
+    @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md py-2 px-4 text-base text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 focus:placeholder-gray-400;
+  }
+
+  .color-input {
+    @apply appearance-none min-w-0 bg-white border border-gray-300 shadow-sm rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-limegreen-500 focus:border-gray-400 w-10 h-10 p-0;
+  }
+
+  .actions {
+    @apply pt-5 flex justify-end;
   }
 }
 
