--- a/app/components/admin/page_header_component/page_header_component.html.erb
+++ b/app/components/admin/page_header_component/page_header_component.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 border-b border-gray-200 w-full flex items-center px-4 page-header py-1">
+<div class="bg-gray-100 border-b border-gray-200 w-full flex items-center px-4 page-header py-1 h-16">
   <div class="flex items-baseline flex-grow">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
       <%= title %>
